--- a/Tasks 5.5
+++ b/Tasks 5.5
@@ -1,8 +1,7 @@
 open System
 //5.5.1. Напишите функцию g(n) = n + 5 без использования анонимной функции, и в комментариях укажите её тип.
 let g n = n + 5 //int->int
-let f = g 5
-printfn "%d"f
+printfn "%d"(g 5)
 
 //5.5.2. Реализуйте функцию gg(n) = n + 5 с помощью лямбда-функции.
 let gg = fun n -> n + 5
